@@ -71,6 +71,7 @@ set variables(REQUEST)          "%releasename %u_name %g_name %u_tagline"
 set variables(REQFILLED)        "%releasename %u_name %g_name %u_tagline %u_requester"
 set variables(WIPE)             "%pf %u_name %g_name %u_tagline"
 set variables(WIPE-r)           "%pf %u_name %g_name %u_tagline"
+set variables(SPEEDTEST)        "%pf %u_name %g_name %mbps %mbits %mbytes"
 
 ## Third party variables
 set variables(IMDB)             "%pf %msg %imdbdestination"
