@@ -80,6 +80,9 @@
 #ifndef speedtest_dirs
 #define speedtest_dirs			"/site/speedtest/"
 #endif
+#ifndef speedtest_delfile
+#define speedtest_delfile		FALSE
+#endif
 #ifndef noforce_sfv_first_dirs
 #define noforce_sfv_first_dirs		"/site/incoming/requests/"
 #endif
